--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,7 @@ jobs:
   Continuous-Integration-Build:
     name: Continuous Integration Build
     runs-on: ubuntu-20.04
+    environment: Build
  
     steps:
       - name: Checkout
@@ -84,6 +85,7 @@ jobs:
     name: Deploy Test
     needs: Continuous-Integration-Build
     runs-on: ubuntu-20.04
+    environment: Staging
     steps:
       - uses: actions/checkout@v3.0.0
       
@@ -119,7 +121,8 @@ jobs:
   Deploy-Prod:
     name: Deploy Prod
     needs: Deploy-Test
-    runs-on: ubuntu-20.04         
+    runs-on: ubuntu-20.04   
+    environment: Production
     steps:
       - name: Checkout
         uses: actions/checkout@v3.0.0
